# cockroachdb-mcp-client

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
cockroachdb_mcp_client/: __init__.py  cli.py  config.py  utils.py
cockroachdb_mcp_client/commands/: create.py  delete.py  export.py  get.py  list_.py  run.py  simulate.py
cockroachdb_mcp_client/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/: test_cli.py  test_cli_integration.py  test_config.py
tests/test_providers/: test_openai.py
